replaced some code with variables, fixed some line height and spacing on text

--- a/css/events.css
+++ b/css/events.css
@@ -29,7 +29,7 @@ Section Styles (background, padding, etc.)
 .title-img {
 	width: 100%;
 	min-height: 250px;
-	margin-bottom: 60px;
+	margin-bottom: var(--spacing65);
 	background-image: url("/assets/images/pages/event-program/introspective.jpg");
 	background-size: cover;
 	background-position: center;
@@ -42,11 +42,12 @@ Section Styles (background, padding, etc.)
 .title h1 {
 	color: var(--color-onyx);
 	margin-top: 0px;
-	margin-bottom: var(--spacing20);
+	margin-bottom: var(--spacing10);
 	font-size: var(--font36);
 	line-height: var(--line-height40);
 }
 .title p {
+	line-height: var(--line-height26);
 	margin: 0px;
 	color: var(--color-onyx);
 	text-align: center;
@@ -61,7 +62,7 @@ Section Styles (background, padding, etc.)
 .event-page-card-img {
 	width: 100%;
 	height: var(--spacing213);
-	border-radius: 10px;
+	border-radius: var(--spacing10);
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -90,13 +91,13 @@ Section Styles (background, padding, etc.)
 .event-page-card-title {
 	width: 100%;
 	height: 130px;
-	padding: 29px;
+	padding: var(--spacing20);
 	margin: var(--spacing20) 0px;
-	border-radius: 10px;
+	border-radius: var(--spacing10);
 	text-align: center;
 }
 .event-page-card-title .h3-styles {
-	margin: 0px 0px var(--spacing20) 0px;
+	margin: 0px;
 	font-size: var(--font28);
 	line-height: var(--line-height32);
 }
@@ -121,6 +122,7 @@ Section Styles (background, padding, etc.)
 }
 .event-page-card-text p {
 	color: var(--color-onyx);
+	line-height: var(--line-height26);
 }
 
 /* Upcoming Events/Previous Events */
@@ -158,13 +160,13 @@ Section Styles (background, padding, etc.)
 	text-align: center;
 }
 .event-info .h4-styles {
-	margin: 11px 0px 15px 0px;
+	margin: var(--spacing20) 0px;
 	color: var(--color-onyx);
 }
 .event-info p {
 	margin: 0px;
 	font-size: var(--font21);
-	line-height: var(--line-height26);
+	line-height: var(--line-height32);
 	color: var(--color-onyx);
 }
 
@@ -194,12 +196,6 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 		/* increasing card height for tablet */
 		height: 300px;
 	}
-	
-	.event-page-card-title .h3-styles {
-		/* reducing margin between h3 and p to fit into smaller card title size */
-		margin: 0px 0px 15px 0px;
-	}
-
 }
 
 /* Tablet and Larger */
@@ -213,7 +209,7 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	/* adding desktop image */
 	.title {
 		height: 100vh;
-		max-height: 992px;
+		max-height: 1000px;
 		background-image: url("/assets/images/pages/event-program/desktop/hero-d.jpg");
 		background-size: cover;
 		background-position: center;
@@ -246,6 +242,10 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	.title-text .h2-styles {
 		font-size: var(--font56);
 		line-height: var(--line-height58);
+		margin-bottom: var(--spacing20);
+	}
+	.title-text p {
+		line-height: var(--line-height32);
 	}
 
 
@@ -291,10 +291,8 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 	
 	.event-page-card-title {
 		height: 110px;
-		/* padding reduces for tablet and up */
-		padding: var(--spacing20);
 		margin: 0px;
-		border-radius: 0px 0px 10px 10px;
+		border-radius: 0px 0px var(--spacing10) var(--spacing10);
 		text-align: left;
 		/* positioning */
 		position: absolute;
@@ -356,7 +354,7 @@ Feel free to change the min/max-width values to whatever you need. Use variables
 
 	.event-page-card-title {
 		/* increasing card title height */
-		height: 126px;
+		height: 130px;
 	}
 
 	.event-page-card-title .h3-styles {
